--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "^3.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,6 +34,7 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^4.1.0"
+    "cypress": "^4.1.0",
+    "prettier": "^2.2.1"
   }
 }
