--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "^3.4.4"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.4",
+    "socket.io": "^3.1.1",
+    "socket.io-client": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
